Fix: Comment smiley position aligned

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
   overflow: hidden;
 }
 
-.stories{
+.stories {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -124,7 +124,7 @@ body {
 .status-wrapper::-webkit-scrollbar {
   display: none;
 }
-.story--scroll{
+.story--scroll {
   background-color: #fff;
   color: #999;
   padding: 5px 8px;
@@ -266,6 +266,7 @@ body {
 
 .comment-wrapper .icons {
   height: 25px;
+  margin: 10px;
 }
 
 .comment-box {
@@ -289,7 +290,7 @@ body {
   font-weight: bold;
 }
 
-.comment-btn{
+.comment-btn {
   padding-right: 1.3rem;
 }
 
@@ -388,12 +389,12 @@ body {
   margin-top: 4px;
 }
 
-  .navbar-mobile-top {
-    display: none;
-  }
-  .navbar-mobile-bottom {
-    display: none;
-  }
+.navbar-mobile-top {
+  display: none;
+}
+.navbar-mobile-bottom {
+  display: none;
+}
 
 @media (max-width: 1100px) {
   .right-col,
@@ -413,7 +414,6 @@ body {
   .navbar-mobile-bottom {
     display: none;
   }
-
 }
 @media (max-width: 550px) {
   .navbar {
